Fixed submit button still not showing on mobile

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -180,7 +180,7 @@ input[type=submit] {
   float: right;
   border: none;
   cursor: pointer;
-  -webkit-appearance: none;
+  -webkit-appearance: square;
   -moz-appearance: none;
   appearance: none;
 
